--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>calc</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body> 
         <div id="calc">
             <input id="display" readonly>
             <div id="keys"></div>
@@ -25,8 +25,8 @@
             <button onclick="appendToDisplay('/')" class="operator-btn">/</button>
             <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="calculate">=</button>
-            <button onclick="clearDisplay" class="operator-btn">C</button>
+            <button onclick="calculate()">=</button>
+            <button onclick="clearDisplay()" class="operator-btn">C</button>
 
         </div>
 
