--- a/index.html
+++ b/index.html
@@ -23,10 +23,12 @@
             <button onclick="appendToDisplay('2')">2</button>
             <button onclick="appendToDisplay('3')">3</button>
             <button onclick="appendToDisplay('/')" class="operator-btn">/</button>
-            <button onclick="appendToDisplay('0')">0</button>
             <button onclick="appendToDisplay('.')">.</button>
-            <button onclick="calculate()">=</button>
+            <button onclick="appendToDisplay('0')">0</button>
+            <button onclick="appendToDisplay('000')">000</button>
             <button onclick="clearDisplay()" class="operator-btn">C</button>
+            <button onclick="clearLastDigit()" class="operator-btn">x</button>
+            <button onclick="calculate()">=</button>
 
         </div>
 
